objects/Trigger_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This is Used to Make Active/Deactivate Trigger</description>
    <fields>
        <fullName>BenefitTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BenefitTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CensusMembersTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CensusMembersTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentVersionTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContentVersionTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Setting</label>
</CustomObject>